Fixing layout issue

--- a/app/styles/containers/_music.scss
+++ b/app/styles/containers/_music.scss
@@ -1,5 +1,5 @@
 .music_app {
-  margin-top:0 auto;
+  margin:0 auto;
   .card {
        box-shadow:0px 10px 25px 0px rgba(0,0,0,0.25);
        .loadingMessage{
